resources25/max-object-detector-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"max-object-detector:latest","namespace":"simon-ai"},"fieldPath":"spec.template.spec.containers[?(@.name==\"max-object-detector\")].image","pause":"false"}]
  name: max-object-detector
  namespace: simon-ai
  labels:
    app: max-object-detector
    app.kubernetes.io/component: max-object-detector
    app.kubernetes.io/instance: max-object-detector
    app.kubernetes.io/name: max-object-detector
    app.kubernetes.io/part-of: max-object-detector-app
    app.openshift.io/runtime-namespace: simon-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: max-object-detector
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: max-object-detector
        deployment: max-object-detector      
    spec:
      containers:
        - name: max-object-detector
          image: >-
            image-registry.openshift-image-registry.svc:5000/simon-ai/max-object-detector@sha256:50dbe116f95e5f3248168d4f481bcd5488802b24dc679389efd571dce21e26b5
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
